# tranqil

./: CMakeLists.txt  CMakeLists.txt~  INSTALL  README.md  README.md~  main.js  meson.build  package.json
DEBIAN/: control
app/: index.html  main.css
app/js/: sound.js
data/: application.css  com.enso.tranquil.appdata.xml  com.github.nick92.tranqil.appdata.xml  com.github.nick92.tranqil.appdata.xml.in  com.github.nick92.tranqil.appdata.xml~  com.github.nick92.tranqil.desktop  com.github.nick92.tranqil.desktop.in  com.github.nick92.tranqil.gresource.xml  com.github.nick92.tranqil.gschema.xml  gtk.glade  install_schema.py  meson.build  tranqil-resource.xml  tranquil.desktop
data/icons/: meson.build
data/ui/: AppStyle.css~
debian/: README.Debian  changelog  control  copyright  rules
po/: com.github.nick92.tranqil.pot  fr.po
po/extra/: POTFILES  extra.pot  fr.po
sample/.bzr/repository/: pack-names
sample/trunk/: INSTALL
sample/trunk/.bzr/branch/: branch.conf  last-revision
sample/trunk/.bzr/checkout/: dirstate
sample/trunk/data/: gtk.glade~
sample/trunk/debian/: README  README.source  changelog  control
sample/trunk/po/: CMakeLists.txt
sample/trunk/src/: Tranquil.vala
schemas/: CMakeLists.txt  com.enso.tranquil.gschema.xml
src/: Application.vala  Bus.vala  TranBus.vala  Tranqil.vala  TranqilWindow.vala  TranqilWindow.vala~  Tranquil.vala  TranquilWindow.vala  Window.vala  meson.build
